Tidied most of the HTML/JS

--- a/Webpage/css/bootstrap.css
+++ b/Webpage/css/bootstrap.css
@@ -1050,7 +1050,7 @@ h2 .small,
 .h2 .small,
 h3 .small,
 .h3 .small {
-  font-size: 55%;
+  font-size: 65%;
 }
 h4,
 .h4,
@@ -1214,8 +1214,8 @@ a.bg-danger:hover {
   background-color: #e4b9b9;
 }
 .page-header {
-  margin-left:120px;
   padding-bottom: 9px;
+  margin: 40px 0 20px;
   border-bottom: 1px solid #eee;
 }
 ul,
@@ -1424,8 +1424,6 @@ pre code {
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
   min-height: 1px;
-  padding-bottom:40px;
-  padding-top:30px;
   padding-right: 15px;
   padding-left: 15px;
 }
@@ -3051,7 +3049,6 @@ fieldset[disabled] .btn-link:focus {
 }
 .btn-lg,
 .btn-group-lg > .btn {
-  margin-left:120px;
   padding: 10px 16px;
   font-size: 18px;
   line-height: 1.33;
@@ -3059,7 +3056,6 @@ fieldset[disabled] .btn-link:focus {
 }
 .btn-sm,
 .btn-group-sm > .btn {
-  margin-left:120px;
   padding: 5px 10px;
   font-size: 12px;
   line-height: 1.5;
@@ -3067,7 +3063,6 @@ fieldset[disabled] .btn-link:focus {
 }
 .btn-xs,
 .btn-group-xs > .btn {
-  margin-left:120px;
   padding: 1px 5px;
   font-size: 12px;
   line-height: 1.5;
@@ -3256,7 +3251,6 @@ tbody.collapse.in {
 }
 .btn-group,
 .btn-group-vertical {
-  margin-left:120px;
   position: relative;
   display: inline-block;
   vertical-align: middle;
