--- a/Webpage/css/bootstrap.css
+++ b/Webpage/css/bootstrap.css
@@ -5,13 +5,13 @@
  */
 
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
-}
-body {
-  margin: 0;
 }
 article,
 aside,
@@ -895,7 +895,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
@@ -1081,7 +1081,8 @@ h1,
 }
 h2,
 .h2 {
-  font-size: 30px;
+  font-size: 22px;
+  text-transform:uppercase;
 }
 h3,
 .h3 {
@@ -3693,6 +3694,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav-pills > li {
   float: left;
+  position:fixed;
+  vertical-align:center;
 }
 .nav-pills > li > a {
   border-radius: 4px;
