--- a/Webpage/css/bootstrap.css
+++ b/Webpage/css/bootstrap.css
@@ -957,8 +957,9 @@ body {
   font-family: 'Lato', sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #333;
-  background-color: #fff;
+  color: #fff;
+  background-color: #3e3e3e;
+  text-align:center;
 }
 input,
 button,
@@ -3649,11 +3650,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-left: -1px;
 }
 .nav {
-  padding-left: 0;
   margin-bottom: 0;
   list-style: none;
-  margin:auto;
-  width:100%;
 }
 .nav > li {
   position: relative;
@@ -3698,6 +3696,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav-tabs {
   //* border-bottom:3px solid #363636;*//
+  margin-left:auto;
+  margin-right:auto;
+  width:100%;
 }
 .nav-tabs > img:hover{
   box-shadow: 0px 0px 20px #fff;
@@ -4907,6 +4908,8 @@ a.thumbnail.active {
   padding-left: 0;
   width: 500px;
   margin-bottom: 20px;
+  margin-left:auto;
+  margin-right:auto;
 }
 .list-group-item {
   position: relative;
