--- a/Webpage/css/bootstrap.css
+++ b/Webpage/css/bootstrap.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /*!
  * Bootstrap v3.2.0 (http://getbootstrap.com)
  * Copyright 2011-2014 Twitter, Inc.
@@ -6,6 +5,14 @@
  */
 
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
+
+.nav {
+	width:676px !important;
+}
+
+.nav<div {
+	text-align: center !important;
+}
 
 swag.swag {
 	text-decoration: blink;
@@ -9945,7 +9952,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav {
   margin-bottom: 0;
   list-style: none;
-  width:55% !important;
   margin-left:auto;
   margin-right:auto;
 }
