--- a/Webpage/css/bootstrap.css
+++ b/Webpage/css/bootstrap.css
@@ -996,6 +996,22 @@ a:focus {
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
+a[title]:hover:after {
+  font-size:12px;
+  content: attr(title);
+  padding: 4px 8px;
+  color: #333;
+  position: absolute;
+  left: 0;
+  white-space: nowrap;
+  background-color:white;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -moz-box-shadow: 0px 0px 4px #222;
+  -webkit-box-shadow: 0px 0px 4px #222;
+  box-shadow: 0px 0px 4px #222;
+}
 figure {
   margin: 0;
 }
@@ -9967,7 +9983,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a {
   position: relative;
   display: block;
-  padding: 10px 15px;
+  padding: 0px 0px;
 }
 .nav > li > a:hover,
 .nav > li > a:focus {
