--- a/Webpage/css/bootstrap.css
+++ b/Webpage/css/bootstrap.css
@@ -1484,12 +1484,14 @@ pre code {
   max-height: 340px;
   overflow-y: scroll;
 }
+/*
 .container {
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
+*/
 @media (min-width: 768px) {
   .container {
     width: 750px;
